--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
   "license": "MIT",
   "scripts": {
     "build-server": "webpack --config webpack.config.server.js",
+    "build-client": "webpack --config webpack.config.client.js",
+    "build": "NODE_ENV=production npm run build-client && npm run build-server",
     "build-dev": "NODE_ENV=development npm run build-server && node --inspect dist/index.js",
-    "dev": "nodemon --ext ts --exec \"npm run build-dev\""
+    "dev": "nodemon --ext ts --exec \"npm run build-dev\"",
+    "start": "NODE_ENV=production npm run build && NODE_ENV=production node dist/index.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
