--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build-server": "webpack --config webpack.config.server.js",
     "build-client": "webpack --config webpack.config.client.js",
     "build": "NODE_ENV=production npm run build-client && npm run build-server",
-    "build-dev": "NODE_ENV=development npm run build-server && node --inspect dist/index.js",
+    "build-dev": "NODE_ENV=development npm run build-server && NODE_ENV=development node --inspect dist/index.js",
     "dev": "nodemon --ext ts --exec \"npm run build-dev\"",
     "start": "NODE_ENV=production npm run build && NODE_ENV=production node dist/index.js"
   },
@@ -30,8 +30,10 @@
   },
   "devDependencies": {
     "@swc/core": "^1.3.24",
+    "@types/react-dev-utils": "^9.0.11",
     "@types/react-dom": "^18.2.7",
     "@types/styled-components": "^5.1.26",
+    "@types/webpack-hot-middleware": "^2.25.6",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
     "eslint": "^8.30.0",
@@ -39,10 +41,13 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "nodemon": "^3.0.1",
+    "react-dev-utils": "^12.0.1",
     "swc-loader": "^0.2.3",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
+    "webpack-dev-middleware": "^6.1.1",
     "webpack-dev-server": "^4.11.1",
+    "webpack-hot-middleware": "^2.25.4",
     "webpack-node-externals": "^3.0.0"
   }
 }
